# wik

./: Cargo.toml  README.md  themes.txt
src/: app.rs  main.rs  styles.rs  ui.rs  utils.rs  wikipedia.rs
src/parsing/: markdown_parse.rs
src/utils/: clargs.rs  misc.rs  mod.rs
src/widgets/: alphabox.rs  eraser.rs  mod.rs  scrollbar.rs  textbox.rs
