[package]
name = "wik"
version = "0.1.0"
authors = ["Mustafa Barodawala"]
edition = "2021"
description = "A Wikipedia browser in the terminal, for the inquisitive CLI power-user."

[dependencies]
# Capturing events from the terminal
crossterm = "0.28.1"

# Finding the cache directory
dirs = "5.0.1"

# Rendering a Wikipedia page to the terminal
htmd = "0.1.6"

# Creating the cache
rand = "0.8.5"
serde_json = "1.0.132"

# Parsing Wikipedia page
regex = "1.11.1"

# Making requests to Wikipedia API
reqwest = { version = "0.12.9", features = ["blocking", "json"] }

# Creating and reading cache files
serde = { version = "1.0.214", features = ["derive"] }
sha2 = "0.10.8"

# Opening links in a web browser
webbrowser = "1.0.2"

# Getting user input from CLI
dialoguer = "0.11.0"

# Command line argument parsing
clap = { version = "4.5.21", features = ["derive"] }

# Rendering the TUI
ratatui = { version = "0.29.0", features = ["serde"] }
